feat: modified single file

--- a/cssnew.css
+++ b/cssnew.css
@@ -19036,9 +19036,9 @@ footer .footer-bottom p {
   font-family: myriad-pro, Arial;
   margin: 15px 0 0;
   font-weight: 400;
-  color: #fff;
+  color: #asdusd;
 }
 
 .insights-wraper, .article-wraper, .interactive-wraper, .podcast-wraper {
-    background-color: #0c1220 !important;
+    background-color: #ffffff !important;
 }
